--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
         Ma quandoce lingue coalesce, grammatica del resultant lingue es plu simplic e regulari quam li Europan.
         </p>
         <div class="flex space-x-3 items-center">
-          <img src="/images/visa.png" alt="Visa" class="w-10 h-6 object-contain bg-white rounded p-1">
-          <img src="/images/mastercard.png" alt="MasterCard" class="w-10 h-6 object-contain bg-white rounded p-1">
-          <img src="/images/paypal.png" alt="Paypal" class="w-10 h-6 object-contain bg-white rounded p-1">
+          <img src="\images\visa.png" alt="Visa" class="w-10 h-6 object-contain bg-white rounded p-1">
+          <img src="\images\mastercard.png" alt="MasterCard" class="w-10 h-6 object-contain bg-white rounded p-1">
+          <img src="\images\paypal.png" alt="Paypal" class="w-10 h-6 object-contain bg-white rounded p-1">
         </div>
     </div>
 
