--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           <input type="radio" name="slide" id="slide1" class="hidden" checked>
           <input type="radio" name="slide" id="slide2" class="hidden">
           <div class="slides">
-            <img src="\images\image1.jpg" alt="nature" class="slide w-full h-full object-cover">
-            <img src="\images\image2.jpg" alt="tree" class="slide w-full h-full object-cover">
+            <img src=".\images\image1.jpg" alt="nature" class="slide w-full h-full object-cover">
+            <img src=".\images\image2.jpg" alt="tree" class="slide w-full h-full object-cover">
           </div>
         </div>
         <label for="slide1" class="absolute top-1/2 left-2 transform -translate-y-1/2 bg-blue-200 text-blue-800 rounded-full p-2 shadow-md hover:bg-blue-300" aria-label="Previous slide">◄</label>
@@ -177,9 +177,9 @@
         Ma quandoce lingue coalesce, grammatica del resultant lingue es plu simplic e regulari quam li Europan.
         </p>
         <div class="flex space-x-3 items-center">
-          <img src="\images\visa.jpg" alt="Visa" class="w-10 h-6 object-contain bg-white rounded p-1">
-          <img src="\images\mastercard.jpg" alt="MasterCard" class="w-10 h-6 object-contain bg-white rounded p-1">
-          <img src="\images\paypal.jpg" alt="Paypal" class="w-10 h-6 object-contain bg-white rounded p-1">
+          <img src=".\images\visa.jpg" alt="Visa" class="w-10 h-6 object-contain bg-white rounded p-1">
+          <img src=".\images\mastercard.jpg" alt="MasterCard" class="w-10 h-6 object-contain bg-white rounded p-1">
+          <img src=".\images\paypal.jpg" alt="Paypal" class="w-10 h-6 object-contain bg-white rounded p-1">
         </div>
     </div>
 
